workload/sonarqube/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonar-svc
  labels:
    name: sonar-svc
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
  selector:
    app: sonarqube
